# code

./: AUTHORS.txt  CMakeLists.txt  LICENCE  README.md  round_trip.sh  run.sh  send.sh
examples/: entropy.cpp  fig1.sh  fig2.sh  generic.cpp  read_network.cpp  round_trip_wl.cpp  run.sh
source/: CMakeLists.txt  histogram.h  io.h  main.cpp  network.h  proposer.h  random.h  sampler.h
test/: main.cpp  test_histogram.h  test_system.h
